--- a/app/src/main/res/layout/view_list_item.xml
+++ b/app/src/main/res/layout/view_list_item.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     android:layout_height="80dp"
-    android:layout_marginTop="16dp">
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp">
 
     <ImageView
         android:id="@+id/flag"
@@ -32,11 +32,11 @@
 
     <TextView
         android:id="@+id/currencyName"
-        android:textColor="#616161"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:text="Danish Krone"
+        android:textColor="#616161"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/flag"
@@ -48,10 +48,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints=""
+        android:inputType="numberDecimal"
         android:gravity="end"
         android:hint="0"
         android:minWidth="40dp"
         android:textSize="24sp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -74,5 +77,15 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="206dp" />
 
+    <View
+        android:id="@+id/itemSelector"
+        android:layout_width="0dp"
+        android:clickable="true"
+        android:layout_height="80dp"
+        android:background="?attr/selectableItemBackground"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/currencyValue"
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
