--- a/app/src/main/res/layout/activity_currencies_list.xml
+++ b/app/src/main/res/layout/activity_currencies_list.xml
@@ -26,10 +26,36 @@
         android:layout_height="0dp" />
 
     <View
+        android:id="@+id/toolbarShadow"
         android:background="@drawable/grey_veritical_gradient"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_width="0dp"
         android:layout_height="8dp"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loadingView"
+        app:layout_constraintTop_toBottomOf="@id/toolbarShadow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:lottie_fileName="circle_spin.json"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/emptyStateView"
+        android:text="@string/empty_state_message"
+        android:gravity="center"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/toolbarShadow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
