--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorGrey">#15000a12</color>
     <color name="colorTransparent">#00000000</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
