--- a/app/src/main/res/layout/activity_currencies_list.xml
+++ b/app/src/main/res/layout/activity_currencies_list.xml
@@ -32,7 +32,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_width="0dp"
-        android:layout_height="8dp"/>
+        android:layout_height="@dimen/toolbarShadowHeight"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loadingView"
@@ -40,8 +40,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="@dimen/loadingViewSize"
+        android:layout_height="@dimen/loadingViewSize"
         app:lottie_fileName="circle_spin.json"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"/>
